# spore-fates

./: .env.example  .gitignore  DEPLOY.md  README.md  deploy_and_run.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts
api/: auth.ts  auto-sign.ts
contracts/: Cargo.toml  README.md  TEST_GUIDE.md  build_release.sh  deploy.sh  deploy_v2.sh
contracts/contracts/cw-drand-oracle/: Cargo.toml
contracts/contracts/cw-drand-oracle/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/contracts/cw721-spore/: Cargo.toml
contracts/contracts/cw721-spore/.cargo/: config.toml
contracts/contracts/cw721-spore/examples/: cw721_schema.rs
contracts/contracts/cw721-spore/schema/: all_nft_info_response_for__nft_extension_msg.json  execute_msg.json  nft_info_response_for__nft_extension_msg.json  query_msg.json  trait_extension.json
contracts/contracts/cw721-spore/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/contracts/spore-game-controller/: Cargo.toml
contracts/contracts/spore-game-controller/.cargo/: config.toml
contracts/contracts/spore-game-controller/examples/: game_controller_schema.rs
contracts/contracts/spore-game-controller/schema/: config.json  execute_msg.json  global_state.json  instantiate_msg.json  pending_rewards_response.json  query_msg.json  token_info.json  trait_target.json
contracts/contracts/spore-game-controller/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/cw721-spore/: Cargo.toml
contracts/cw721-spore/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/spore-game-controller/: Cargo.toml
contracts/spore-game-controller/src/: error.rs  lib.rs  msg.rs
design/: competitve_rewards.md  genetics.md  stats.md
src/: App.tsx  config.ts  index.css  main.tsx
src/components/: BatchMintModal.tsx  BreedingInterface.tsx  EcosystemWeather.tsx  GameContainer.tsx  GameDashboard.tsx  GeneticSimulator.tsx  GeneticsDisplay.tsx  GlobalStatsBanner.tsx  HarvestOverlay.tsx  MintInterface.tsx  MushroomGallery.tsx  MushroomGrowth.tsx  MushroomRenderer.tsx  NewMushroomReveal.tsx  PartnerSelector.tsx  PendingRewardsWarning.tsx  PlayerStatsCard.tsx  SpinInterface.tsx  SpinWheel.tsx  SpliceModal.tsx  WalletConnect.tsx
src/components/Banners/: GlobalStatsBanner.tsx
src/components/Breeding/: BreedingInterface.tsx  GeneticSimulator.tsx  PartnerSelector.tsx
src/components/Info/: AscensionCard.tsx  EcosystemWeather.tsx  PendingRewardsWarning.tsx  PlayerStatsCard.tsx  RankBadge.tsx
src/components/Logo/: SporeLogo.tsx
src/components/Modals/: AutoRollModal.tsx  BatchMintModal.tsx  HarvestModal.tsx  WalletSelectModal.tsx  WeatherInfoModal.tsx
src/components/Mushroom/: MintInterface.tsx  MushroomGallery.tsx  MushroomGrowth.tsx  MushroomRenderer.tsx
src/components/Mutations/: SpinInterface.tsx  SpinWheel.tsx
src/components/Overlays/: HarvestOverlay.tsx  NewMushroomReveal.tsx
src/components/Providers/: ToastProvider.tsx
src/components/Wallet/: WalletConnect.tsx  WalletConnectButton.tsx
src/hooks/: useAutoSign.ts  useTransaction.ts
src/pages/: about.tsx  contracts.tsx
src/services/: shroomService.ts
src/store/: gameStore.ts  walletStore.ts
src/utils/: toast.tsx  transactionParser.ts
