[package]
name = "drand-oracle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_1_4"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
hex-literal = "0.4.1"
sha2 = "0.10.8"
thiserror = { version = "1.0.58" }