[package]
name = "spore-game-controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw2 = "2.0.0"
cosmwasm-std = "2.2.2"
cosmwasm-schema = "2.2.2"
cw-storage-plus = "2.0.0"
cw721 = "0.18.0"
cw-ownable = "2.1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
ed25519-zebra = "4.1.0"


[dev-dependencies]
cw-multi-test = "0.16.5"
